Bug fix: jumping absolute / fixed positions

--- a/pages/style.css
+++ b/pages/style.css
@@ -481,11 +481,11 @@ body {
 @keyframes slideUp {
   from {
     opacity: 0;
-    transform: translateY(20px);
+    margin-top: 20px;
   }
   to {
     opacity: 1;
-    transform: translateY(0);
+    margin-top: 0;
   }
 }
 
